crates/picante/tests/ui/tracked_missing_db.rs
#[picante::tracked]
pub async fn foo<DB>() -> u64 {
    0
}

fn main() {}
